syntax = "proto3";

package org.federation;

import "grpc/federation/federation.proto";

option go_package = "example/federation;federation";
option (grpc.federation.file)= {
  import: [
    "plugin/plugin.proto"
  ]
};

service FederationService {
  option (grpc.federation.service) = {};
  rpc Get(GetRequest) returns (GetResponse) {};
}

message GetRequest {
  string url = 1;
}
    
message GetResponse {
  option (grpc.federation.message) = {
    def { name: "body" by: "example.net.httpGet($.url)" }
  };
  string body = 1 [(grpc.federation.field).by = "body"];
}
